<resources>
    <string name="app_name">SP Project</string>
    <string name="server_client_id">718861489684-nbli9ar9ta6v4uih2sf1d9rdqr4hkqcl.apps.googleusercontent.com</string>

    <string name="patient">Patient</string>
    <string name="preventor">Preventor</string>
    <string name="Online">Online</string>
    <string name="offline_status">You are offline.</string>

    <string name="welcome_msg">Hi, how are you?</string>

    <string name="exist_chatroom">EXIT</string>
    <string name="no_matching_result">No Matching Result</string>
    <string name="patient_exit">Patient has left this chatroom. </string>
    <string name="preventor_exit">Preventor has left this chatroom. </string>
    <string name="matching_preventor">MATCHING</string>
    <string name="survey">SURVEY</string>

    <string name="profile">profile</string>
    <string name="profile_bio">Bio</string>
    <string name="profile_date_of_birth">Date of Birth</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_nationality">Nationality</string>
    <string name="profile_job">Job</string>
    <string name="profile_languages">Languages</string>
    <string name="profile_interests">Interests</string>
    <string name="profile_hometown">Hometown</string>
    <string name="profile_current_city">Current City</string>
    <string name="profile_bio_text">Please introduce yourself</string>
    <string name="profile_gender_male">Male</string>
    <string name="profile_gender_female">Female</string>
    <string name="profile_address">address</string>
    <string name="profile_lat">lat</string>
    <string name="profile_lng">lng</string>
    <string name="sleep">sleep</string>
    <string name="mood">mood</string>
    <string name="rating">Rating</string>
    <string name="rate">rate</string>
    <string name="rating_desc">Please give a score for the preventor. \n</string>

</resources>
