<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/chattingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/ic_send_black_24dp"
            android:id="@+id/fab"
            android:tint="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            app:fabSize="mini" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/fab"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Input"
                android:id="@+id/input"
                />
        </android.support.design.widget.TextInputLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_above="@id/fab"
            android:dividerHeight="16dp"
            android:divider="@android:color/transparent"
            android:id="@+id/list_of_messages"
            android:layout_marginBottom="16dp"
            android:stackFromBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/preventorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">
        <Button
            android:id="@+id/btn_onOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Online"/>
        <TextView
            android:id="@+id/preventorStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="30dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/patientLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">
        <Button
            android:id="@+id/btn_chkOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matching_preventor"/>
        <Button
            android:id="@+id/btn_survey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/survey"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/view_survey"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:visibility="invisible">
        <android.support.v4.view.ViewPager
            android:id="@+id/surveyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>
</RelativeLayout>